--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.7.1",
     "nanoid": "^4.0.0",
     "next": "13.0.1",
+    "next-connect": "^0.13.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
