--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
   ],
   "rules": {
     "no-underscore-dangle": "off",
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "react/require-default-props": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
