--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
+    "clsx": "^1.2.1",
     "cookies-next": "^2.1.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
